syntax = "proto3";

option csharp_namespace = "Cargo.GRPC.Server";

service DebitGrpc {
  rpc UpdateState(StateUpdateRequest) returns(StateUpdateResponse){}
}

message StateUpdateRequest {
  string CurrentState = 1;
  string CorrelationId = 2;
}

message StateUpdateResponse{

}